# dualify

./: .env.example  .env.local-ollama.example  .env.remote-api.example  .env.remote-vllm.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scheme.drawio.xml  setup.sh
.github/workflows/: ci.yml
benchmark/: benchmark-dataset-sources.md
benchmark/actions_matrix/: eq_no_domains.py  eq_with_domains.py  equivalent_is_zero.py  post_code_no_domains.py  post_code_non_empty_domains.py  post_code_sign_wrong.py  post_spec_no_domains.py  post_spec_non_empty_domains.py  post_spec_positive_relaxed.py  pre_code_double_checked.py  pre_code_mixed_domains.py  pre_code_non_empty_domains.py  pre_spec_double_simple.py  pre_spec_mixed_domains.py  pre_spec_non_empty_domains.py
benchmark/mismatch/: abs_value.py  in_unit_interval.py  is_even.py  max_of_two.py  sign.py  sum_to_n.py
benchmark/repos/calculator/: README.md  __init__.py  advanced.py  cli.py  core.py  errors.py  history.py  memory.py  parser.py
benchmark/synthetic/: binary_search.py  gcd.py  is_positive.py  is_sorted.py  max_of_two.py  sum_range.py
scripts/: run_experiment.py
src/dualify/: __init__.py  discovery.py  fallbacks.py  formula_parser.py  io_utils.py  ollama_client.py  runner.py  types.py
src/dualify/phases/: __init__.py  p01_spec_to_logic.py  p02_code_to_logic.py  p03_smt_checking.py  p04_action_planning.py  p04_refinement.py  p05_action_execution.py
tests/: test_discovery.py  test_formula_normalization.py  test_fsm_matrix.py
